[gd_scene load_steps=2 format=3 uid="uid://cq37xgsir0nbw"]

[ext_resource type="Script" uid="uid://cxijqot2v3opr" path="res://scripts/face_card.gd" id="1_4deeb"]

[node name="face_card" type="Node2D"]
script = ExtResource("1_4deeb")

[node name="card_base" type="Sprite2D" parent="."]

[node name="card_suit" type="Sprite2D" parent="."]

[node name="card_number" type="Sprite2D" parent="."]
